--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
     <title>World's Cakes</title>
   </head>
   <body>
-    <h1>World Cakes</h1>
-    <h2>Welcome to World Cakes! Home of the Best Cupcakes in Portland as voted by Willamette Week five years running!</h2>
+    <h1 class="title">World Cakes</h1>
+    <h2 class="best">Welcome to World Cakes! Home of the Best Cupcakes in Portland as voted by Willamette Week five years running!</h2>
 
-    <p>We bake our cakes locally everyday with <strong class="fresh">fresh, organic,</strong> and <strong class="fresh">locally sourced </strong> ingredients!</p>
+    <img src="img/cupcakes1.jpg" alt="photo of a cupcake">
+
+    <p class="bake">We bake our cakes locally everyday with <strong class="fresh">fresh, organic,</strong> and <strong class="fresh">locally sourced </strong> ingredients!</p>
+
+    <ul>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
 
     <h3>Here's what customers have to say about our cakes: </h3>
 
-    <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful." -John Doe</p>
+    <p class="people">"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful." -John Doe</p>
 
-    <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful." -John Doe</p>
+    <p class="people"> "But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful." -John Doe</p>
 
-    <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful." -John Doe</p>
+    <p class="people">"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful." -John Doe</p>
   </body>
 </html>
